fix: correlation text

--- a/HomeWork8/auction_verification.ipynb
+++ b/HomeWork8/auction_verification.ipynb
@@ -1313,14 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: All models show almost the same result with small difference. In each case hyperparameters need to be selected to improve the model's prediction. Adding new features does not always help improve the result in my case. Since the data frame is not large, training and testing are quite fast, we need to try to pass the test for all models with a higher load and evaluate the speed and performance for each model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`"
+    "Conclusion: All models show almost the same result with small difference. In each case hyperparameters need to be selected to improve the model's prediction. Adding new features does not help improve the result in my case. Since the data frame is not large, training and testing are quite fast. In order to select the winner we need to test all models with a heavy workload and evaluate the speed and performance for each model."
    ]
   }
  ],
