--- a/HomeWork9/PCA.ipynb
+++ b/HomeWork9/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1234,
+   "execution_count": 1293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1235,
+   "execution_count": 1294,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1236,
+   "execution_count": 1295,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1236,
+     "execution_count": 1295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1237,
+   "execution_count": 1296,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1237,
+     "execution_count": 1296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1238,
+   "execution_count": 1297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1239,
+   "execution_count": 1298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,17 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1240,
+   "execution_count": 1299,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Principal Component Analysis\n",
-    "pca = PCA(random_state = 42).fit(X_train)"
+    "pca = PCA(random_state = 42).fit(X_train)\n",
+    "\n",
+    "# 30% losses\n",
+    "loss_value = 0.7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1241,
+   "execution_count": 1300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1242,
+   "execution_count": 1301,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1243,
+   "execution_count": 1302,
    "metadata": {},
    "outputs": [
     {
@@ -444,13 +447,13 @@
    ],
    "source": [
     "# Calculate number of components\n",
-    "components_needed = np.argmax(explained_variance_cumulative > 0.7) + 1.0\n",
+    "components_needed = np.argmax(explained_variance_cumulative > loss_value) + 1.0\n",
     "\n",
     "# Plot of losing info\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(range(1, len(explained_variance_cumulative) + 1), explained_variance_cumulative, marker='o', linestyle='--', label=\"Cumulative Explained Variance\")\n",
     "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
-    "plt.axhline(y=0.7, color='r', linestyle='-', label=\"70% Explained Variance Threshold\")\n",
+    "plt.axhline(y=loss_value, color='r', linestyle='-', label=\"70% Explained Variance Threshold\")\n",
     "plt.axvline(x=components_needed, color='g', linestyle='--', label=f\"Components Needed: {components_needed}\")\n",
     "\n",
     "plt.title('Explained Variance vs Number of Components')\n",
@@ -470,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1244,
+   "execution_count": 1303,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +486,7 @@
    ],
    "source": [
     "# Create model with 70% components\n",
-    "pca = PCA(n_components = 0.70, random_state = 42)\n",
+    "pca = PCA(n_components = loss_value, random_state = 42)\n",
     "\n",
     "# Train again \n",
     "X_train = pca.fit_transform(X_train)\n",
@@ -494,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 1304,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: PCA is mportant for linear and logistic regression when dataset is big. It helps us to reduce size and increase model performance. We train Random forest classifer model to check how it will be trained and finally will get very good result with just 11 components. Almost half of dataset we didn't use. In result we got 80 accuracy, that is quite good value."
+    "Conclusion: Using the current aproach we calculated that about 11 components we need to work with out model and we lost only 30% information. PCA is mportant for linear and logistic regression when dataset is big. It helps us to reduce size and increase model performance. We train Random forest classifer model to check how it will be trained and finally will get very good result with just 11 components. Almost half of dataset we didn't use. In result we got 80 accuracy, that is quite good value.finally will get very good result with just 11 components. Almost half of dataset we didn't use. In result we got 80 accuracy, that is quite good value."
    ]
   }
  ],
