--- a/HomeWork9/PCA.ipynb
+++ b/HomeWork9/PCA.ipynb
@@ -525,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: Using the current aproach we calculated that about 11 components we need to work with out model and we lost only 30% information. PCA is mportant for linear and logistic regression when dataset is big. It helps us to reduce size and increase model performance. We trained Random forest classifer model to check how it will be trained and finally got very good result with only 11 components. Almost half of dataset we didn't use. In result we got 80 accuracy, that is quite good prediciton."
+    "Conclusion: Using the current aproach we calculated that about 11 components we need to work with our model and we lost only 30% information. PCA is mportant for linear and logistic regression when dataset is big. It helps us to reduce size and increase model performance. We trained Random forest classifer model to check how it will be trained and finally got very good result with only 11 components. Almost half of dataset we didn't use. In result we got 80 accuracy, that is quite good prediciton."
    ]
   }
  ],
