--- a/HomeWork9/PCA.ipynb
+++ b/HomeWork9/PCA.ipynb
@@ -531,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jupyterEnv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
