--- a/HomeWork10/credit.ipynb
+++ b/HomeWork10/credit.ipynb
@@ -965,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jupyterEnv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
