feat: analyze BOW and TF-IDF models

--- a/HomeWork11/imdb.ipynb
+++ b/HomeWork11/imdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,48 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "import re"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data from IMDB csv file\n",
+    "data = pd.read_csv('./IMDB.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert HTML to text "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -82,30 +118,341 @@
        "4  petter mattei s love in the time of money is a...          1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('./IMDB Dataset.csv')\n",
-    "\n",
+    "# func for handle HTML to text\n",
     "def preprocessing_text(texts):\n",
     "    texts = re.sub(r'<.*?>', '', texts)\n",
     "    texts = re.sub(r'[^a-zA-Z]', ' ', texts)\n",
     "    return ' '.join(x.lower() for x in texts.split())\n",
     "\n",
+    "# Transform HTML to text\n",
     "data['review'] = data['review'].apply(lambda x : preprocessing_text(x))\n",
+    "\n",
+    "# Encode target\n",
     "data['sentiment'] = data['sentiment'].apply(lambda x: 1 if x == 'positive' else 0)\n",
+    "\n",
+    "# Look at result\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50000 entries, 0 to 49999\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   review     50000 non-null  object\n",
+      " 1   sentiment  50000 non-null  int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 781.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get info\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50000, 2)"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment\n",
+       "1    25000\n",
+       "0    25000\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "50/50 result positive and negative valuues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  Split into input features and target variable\n",
+    "X = data['review']  \n",
+    "y = data['sentiment'] \n",
+    "\n",
+    "# Split into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CountVectorizer model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aaron' 'abandoned' 'abc' ... 'zombie' 'zombies' 'zone']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configuring CountVectorizer to skip unnecessary data\n",
+    "count_vectorizer = CountVectorizer(\n",
+    "    stop_words='english',      # Remove common English stopwords\n",
+    "    min_df=5,                 # Ignore words that appear in fewer than 5 documents\n",
+    "    max_df=0.7,               # Ignore words that appear in more than 70% of documents\n",
+    "    max_features=5000         # Keep only the top 5000 most frequent words\n",
+    ")\n",
+    "\n",
+    "# Fit the vectorizer on training data\n",
+    "X_train_vectorized = count_vectorizer.fit_transform(X_train)\n",
+    "\n",
+    "# Transform test data\n",
+    "X_test_vectorized = count_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Check the vocabulary\n",
+    "print(count_vectorizer.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test_vectorized.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TfidfVectorizer model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abandoned' 'abc' 'abilities' ... 'zombie' 'zombies' 'zone']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configure TfidfVectorizer\n",
+    "tfidf_vectorizer = TfidfVectorizer(\n",
+    "    stop_words='english',      # Remove common stopwords\n",
+    "    min_df=5,                 # Ignore words that appear in fewer than 5 documents\n",
+    "    max_df=0.7,               # Ignore words that appear in more than 70% of documents\n",
+    "    max_features=5000,        # Keep the top 5000 most important words\n",
+    "    ngram_range=(1, 2)        # Include unigrams and bigrams\n",
+    ")\n",
+    "\n",
+    "# Fit the vectorizer on training data and transform the data\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "\n",
+    "# Transform test data\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test) \n",
+    "\n",
+    "# Check the vocabulary\n",
+    "print(tfidf_vectorizer.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test_tfidf.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create MultinomialNB\n",
+    "mnb = MultinomialNB()\n",
+    "\n",
+    "# Bag of Words (BOW) pipeline\n",
+    "bow_pipeline = Pipeline([\n",
+    "    ('vectorizer', count_vectorizer), \n",
+    "    ('classifier', mnb) \n",
+    "])\n",
+    "\n",
+    "# TF-IDF pipeline\n",
+    "tfidf_pipeline = Pipeline([\n",
+    "    ('vectorizer', tfidf_vectorizer),\n",
+    "    ('classifier', mnb) \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BOW Accuracy: 0.8466\n",
+      "BOW Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.85      0.85      4961\n",
+      "           1       0.85      0.84      0.85      5039\n",
+      "\n",
+      "    accuracy                           0.85     10000\n",
+      "   macro avg       0.85      0.85      0.85     10000\n",
+      "weighted avg       0.85      0.85      0.85     10000\n",
+      "\n",
+      "TF-IDF Accuracy: 0.8533\n",
+      "TF-IDF Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.84      0.85      4961\n",
+      "           1       0.85      0.87      0.86      5039\n",
+      "\n",
+      "    accuracy                           0.85     10000\n",
+      "   macro avg       0.85      0.85      0.85     10000\n",
+      "weighted avg       0.85      0.85      0.85     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train and evaluate models\n",
+    "# BOW model\n",
+    "bow_pipeline.fit(X_train, y_train)\n",
+    "bow_predictions = bow_pipeline.predict(X_test)\n",
+    "print(\"BOW Accuracy:\", accuracy_score(y_test, bow_predictions))\n",
+    "print(\"BOW Classification Report:\\n\", classification_report(y_test, bow_predictions))\n",
+    "\n",
+    "# TF-IDF model\n",
+    "tfidf_pipeline.fit(X_train, y_train)\n",
+    "tfidf_predictions = tfidf_pipeline.predict(X_test)\n",
+    "print(\"TF-IDF Accuracy:\", accuracy_score(y_test, tfidf_predictions))\n",
+    "print(\"TF-IDF Classification Report:\\n\", classification_report(y_test, tfidf_predictions))"
+   ]
   }
  ],
  "metadata": {
