--- a/HomeWork17/forecast.ipynb
+++ b/HomeWork17/forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy8IbjjGQPUK8s2906orIV",
+      "authorship_tag": "ABX9TyNsRkgh5Wj8pHz9GB1UZoqx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1875,7 +1875,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data Pre-processing"
+        "## Data Pre-Processing"
       ],
       "metadata": {
         "id": "57eJAg_ef7RG"
